# jet-lag-munich

./: .editorconfig  .gitignore  .infisical.json  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  animate_timeline_real_nyc.py  animate_timeline_real_nyc_og.py  animate_timeline_simple_nyc.py  commuter_rail_lines.kml  commuter_rail_stations.kml  debug_subway_colors.py  dprint.json  main.py  mise.toml  pyproject.toml  pyrightconfig.json  renovate.json  ruff.toml  taplo.toml  test_original_script.py  test_subway_waypoints.py  test_timeline_animation.py
.github/actions/find-update-or-create-comment/: action.yaml
.github/actions/setup-python/: action.yaml
.github/workflows/: ci.yaml
.toolchain/python/pyright/: base.json
.toolchain/python/ruff/: base.toml
.toolchain/python/ty/: base.toml
core/: logging.py
core/map/: main.py
scripts/: dprint-python-wrapper.sh
tests/: conftest.py
tests/fixtures/: sample_subway_lightrail.geojson
tests/map/: test_main.py  test_visual.py
