[project]
  name = "jet-lag-munich"
  version = "0.1.0"
  description = "Add your description here"
  readme = "README.md"
  requires-python = ">=3.13"
  dependencies = [
    "GDAL==3.4.1",
    "geopandas==1.1.1",
    "httpx==0.28.1",
    "structlog>=25.4.0",
    "pandas==2.3.2"
  ]

[dependency-groups]

  dev = [
    # testing
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-profiling>=1.8.1",

    # linting and formatting
    "pyright>=1.1.403",
    "ruff>=0.12.9",
    "types-pyyaml>=6.0.12.20250809",
    "ssort>=0.15.0",
    "ty>=0.0.1a20",
  ]

  [project.scripts]
    map = "core.map.main:main"

[build-system]
  requires      = ["setuptools>=70"]
  build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
  include = ["core*", "storage*", "configs*"]
  exclude = ["tests*", "scripts*"]

[tool.pytest.ini_options]
  minversion = "8.0"
  testpaths = ["tests/"]
  pythonpath = ["."]
  addopts = ["-ra", "--strict-markers", "--strict-config", "--showlocals", "-q"]
  markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
  filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
  ]
